<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ANSUR</string>
    <string name="menu_settings">Settings</string>
    <string name="cameraListButton">List possible cameras</string>
    <string name="subscribeButton">Subscribe</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_cameras">ListCamerasActivity</string>
    <string name="back_button">Back</string>
    <string name="refresh_button">Refresh</string>
    <string name="connectButton">Register device on Server</string>
    <string name="dConnectButton">Deregister device on server</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="set_settings_button">Save</string>
    <string name="title_activity_download_file">Downloading Movie</string>
    <string name="Downloading_movie">Movie Downloaded!</string>
    <string name="copyToClipbordButton">Copy streamdetails to clipbord!</string>
    <string name="launch_vlc_button">Launch VLC</string>
        <string name="title_activity_cam_detail">Camera Detail</string>

</resources>